// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServerItem matches the snapshot when the server is running 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServerItem
    server={
        Object {
            "id": "test-server-1",
            "status": "running",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <td
          onClick={[Function]}
>
          test-server-1
</td>,
        <td>
          <button
                    className="btn btn-negative"
                    onClick={[Function]}
          >
                    Stop
          </button>
</td>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "test-server-1",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "test-server-1",
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <button
            className="btn btn-negative"
            onClick={[Function]}
>
            Stop
</button>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Stop",
            "className": "btn btn-negative",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Stop",
          "type": "button",
        },
        "type": "td",
      },
    ],
    "type": "tr",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <td
            onClick={[Function]}
>
            test-server-1
</td>,
          <td>
            <button
                        className="btn btn-negative"
                        onClick={[Function]}
            >
                        Stop
            </button>
</td>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "test-server-1",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "test-server-1",
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn btn-negative"
              onClick={[Function]}
>
              Stop
</button>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Stop",
              "className": "btn btn-negative",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Stop",
            "type": "button",
          },
          "type": "td",
        },
      ],
      "type": "tr",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServerItem matches the snapshot when the server is stopped 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServerItem
    server={
        Object {
            "id": "test-server-2",
            "status": "stopped",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <td
          onClick={[Function]}
>
          test-server-2
</td>,
        <td>
          <button
                    className="btn btn-positive"
                    onClick={[Function]}
          >
                    Start
          </button>
</td>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "test-server-2",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "test-server-2",
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <button
            className="btn btn-positive"
            onClick={[Function]}
>
            Start
</button>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Start",
            "className": "btn btn-positive",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Start",
          "type": "button",
        },
        "type": "td",
      },
    ],
    "type": "tr",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <td
            onClick={[Function]}
>
            test-server-2
</td>,
          <td>
            <button
                        className="btn btn-positive"
                        onClick={[Function]}
            >
                        Start
            </button>
</td>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "test-server-2",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "test-server-2",
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn btn-positive"
              onClick={[Function]}
>
              Start
</button>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Start",
              "className": "btn btn-positive",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Start",
            "type": "button",
          },
          "type": "td",
        },
      ],
      "type": "tr",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
